# dailog_chat_room

./: .gitignore  README.md
backend/: .coverage  .env  .env.example  .gitignore  README.md  alembic.ini  create_tables.py  pyproject.toml  requirements.txt  verify_compatibility.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_user_support.py  003_remove_foreign_keys.py
backend/app/: config.py  database.py  dependencies.py  logger.py  main.py
backend/app/agents/: __init__.py  graph.py  memory.py  nodes.py  state.py  tools.py  utils.py
backend/app/api/v1/: __init__.py  (+5 more)
backend/app/models/: __init__.py  knowledge.py  message.py  session.py  user.py  user_preference.py
backend/app/schemas/: __init__.py  knowledge.py  message.py  preference.py  session.py  user.py
backend/app/services/: auth_service.py  chroma_service.py  chunking_service.py  document_service.py  embedding_service.py  firecrawl_service.py  knowledge_service.py  llm_service.py  memory_extraction_service.py  memory_service.py  message_service.py  session_service.py  summary_service.py  token_service.py
backend/backend/docs/: task5_e2e_test_report.md
backend/docs/: ARCHITECTURE.md  task4_verification_report.md
backend/tests/: conftest.py  test_chat_integration.py  test_chroma_service.py  test_chunking_service.py  test_config.py  test_config_auth.py  test_dependencies.py  test_document_service_integration.py  test_e2e.py  test_embedding_service.py  test_knowledge_api.py  test_llm_service.py  test_passlib_installation.py  test_streaming.py  test_summary_service.py
(+122 files in other folders)
